--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,8 @@
 			"email": "ssmodules@pswd.biz"
 	}],
 	"require": {
-		"silverstripe/framework": "3.*",
-		"silverstripe/cms": "3.*",
+		"silverstripe/framework": "~3.1",
+		"silverstripe/cms": "~3.1",
 		"undefinedoffset/sortablegridfield": "*",
 		"colymba/gridfield-bulk-editing-tools": "*"
 	}
