--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
 		"silverstripe/framework": "~3.1",
 		"silverstripe/cms": "~3.1",
 		"undefinedoffset/sortablegridfield": "*",
-		"colymba/gridfield-bulk-editing-tools": "*"
+		"colymba/gridfield-bulk-editing-tools": "*",
+		"colymba/gridfield-gallery-theme": "*"
 	}
 }
