Abstracted Photo Gallery Features to an Extension

--- a/_config/galleries.yml
+++ b/_config/galleries.yml
@@ -1,3 +1,6 @@
 LeftAndMain:
     extra_requirements_css:
         - basic-galleries/css/cms.css
+PhotoGalleryPage:
+    extensions:
+        - PhotoGalleryExtension
