--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
 	"name": "purplespider/basic-galleries",
 	"description": "Basic Photo Gallery functionality",
-	"type": "silverstripe-module",
+	"type": "silverstripe-vendormodule",
 	"homepage": "https://github.com/purplespider/silverstripe-basic-galleries",
 	"keywords": ["silverstripe", "photo", "gallery", "image", "bulk"],
 	"license": "BSD-3-Clause",
@@ -13,10 +13,14 @@
 		"issues": "https://github.com/purplespider/silverstripe-basic-galleries/issues"
 	},
 	"require": {
-		"silverstripe/framework": "~3.1",
-		"silverstripe/cms": "~3.1",
-		"undefinedoffset/sortablegridfield": "*",
-		"colymba/gridfield-bulk-editing-tools": "2.1.*",
-		"colymba/gridfield-gallery-theme": "1.0.*"
+		"silverstripe/framework": "~4.1",
+		"silverstripe/cms": "~4.1",
+		"colymba/gridfield-bulk-editing-tools": "3.*",
+		"undefinedoffset/sortablegridfield": "2.*"
+	},
+	"extra": {
+		"expose": [
+			 "client/dist"
+		]
 	}
 }
