--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
 		"issues": "https://github.com/purplespider/silverstripe-basic-galleries/issues"
 	},
 	"require": {
-		"silverstripe/framework": "~4.1",
-		"silverstripe/cms": "~4.1",
+		"silverstripe/framework": "^4.1",
+		"silverstripe/cms": "^4.1",
 		"colymba/gridfield-bulk-editing-tools": "3.*",
-		"undefinedoffset/sortablegridfield": "2.*"
+		"symbiote/silverstripe-gridfieldextensions": "^3"
 	},
 	"extra": {
 		"expose": [
