Config: Added Name

--- a/_config/galleries.yml
+++ b/_config/galleries.yml
@@ -1,3 +1,6 @@
+---
+Name: basic-galleries
+---
 SilverStripe\Admin\LeftAndMain:
   extra_requirements_css:
     - 'purplespider/basic-galleries:client/dist/css/cms.css'
@@ -7,3 +10,4 @@ PurpleSpider\BasicGalleries\PhotoGalleryPage:
   gallery-title: Image Gallery
   gallery-cms-tab: Main
   content-cms-tab: Top Content
+  gallery-disable-captions: true
