Added support for Lumberjack
To display multiple child galleries in a GridField instead of in the SiteTree, install LumberJack and add the LumberJack as an extension to PhotoGalleryHolder. Alternatively, add the included CustomLumberJack extension instead, to make the GridField tab the first one.

--- a/_config/galleries.yml
+++ b/_config/galleries.yml
@@ -5,6 +5,7 @@ SilverStripe\Admin\LeftAndMain:
   extra_requirements_css:
     - 'purplespider/basic-galleries:client/dist/css/cms.css'
 PurpleSpider\BasicGalleries\PhotoGalleryPage:
+  show_in_sitetree: false
   extensions:
     - PurpleSpider\BasicGalleries\PhotoGalleryExtension
   gallery-title: Image Gallery
