Fix ondelete_delete_image_files config option

--- a/_config/galleries.yml
+++ b/_config/galleries.yml
@@ -11,4 +11,5 @@ PurpleSpider\BasicGalleries\PhotoGalleryPage:
   gallery-title: Image Gallery
   gallery-cms-tab: Main
   content-cms-tab: Top Content
+PurpleSpider\BasicGalleries\PhotoGalleryImage:
   ondelete_delete_image_files: false
