--- a/composer.json
+++ b/composer.json
@@ -15,9 +15,7 @@
 	"require": {
 		"silverstripe/framework": "^4.4",
 		"silverstripe/cms": "^4.4",
-		"colymba/gridfield-bulk-editing-tools": "3.*",
-		"symbiote/silverstripe-gridfieldextensions": "^3",
-		"silverstripe/lumberjack": "2.*"
+		"purplespider/silverstripe-basic-gallery-extension": "^1"
 	},
 	"extra": {
 		"expose": [
