Added PhotoGalleryImage to classname_value_remapping

--- a/_config/legacy.yml
+++ b/_config/legacy.yml
@@ -3,4 +3,5 @@ Name: basic-galleries-legacy
 ---
 SilverStripe\ORM\DatabaseAdmin:
   classname_value_remapping:
-    PurpleSpider\BasicGalleries\PhotoGalleryImage: PurpleSpider\BasicGalleryExtension\PhotoGalleryImage 
+    PurpleSpider\BasicGalleries\PhotoGalleryImage: PurpleSpider\BasicGalleryExtension\PhotoGalleryImage
+    PhotoGalleryImage: PurpleSpider\BasicGalleryExtension\PhotoGalleryImage
